--- a/src/index.html
+++ b/src/index.html
@@ -57,14 +57,17 @@
     <div>
         <h3>Resultado:</h3>
         <pre id="resultOutput"></pre>
-        <button onclick="downloadResult()" id="downloadBtn" disabled>Descargar Resultado</button>
+        <button onclick="toHtmlTableDisplay()" id="downloadBtn" disabled>Descargar Resultado</button>
+        <div id="containerTable">
+            <!-- Aquí se mostrará la tabla HTML -->
+        </div>
     </div>
 
     <script type="module">
         import * as mainFunctions from './scripts/main.js';
         window.previewCSV = mainFunctions.previewCSV;
         window.processCSV = mainFunctions.processCSV;
-        window.downloadResult = mainFunctions.downloadResult;
+        window.toHtmlTableDisplay = mainFunctions.toHtmlTableDisplay;
         window.addToPipeline = mainFunctions.addToPipeline;
         window.clearPipeline = mainFunctions.clearPipeline;
         window.confirmParams = mainFunctions.confirmParams;
